--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -29,12 +29,6 @@ body {
 }
 /* Navbar - end*/
 
-*{
-	margin: 0;
-  	padding: 0;
-    box-sizing: border-box;
-}
-
 .container-register{
     display: block;
     background-color: #f4f4f4;
@@ -74,6 +68,7 @@ input{
     font-size: 1rem;
     color: #3f3f3f;
 }
+
 
 /* Form - Start*/
 form{
@@ -118,4 +113,11 @@ form select{
 .error{
     margin-top: 0px;
     color: red;
+}
+
+label{
+	font-weight: 600;
+	font-size: 18px;
+	padding-top: 6px;
+	justify-content: center;
 }
