--- a/src/main/resources/templates/customerRegisterForm.html
+++ b/src/main/resources/templates/customerRegisterForm.html
@@ -14,7 +14,7 @@
 
 <body ng-app="myApp">
 
-	<!--Navbar-->
+<!--	Navbar-->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light py-3 fixed-top">
 		<div class="container">
 			<a class="navbar-brand text-black" href="/">SBM</a>
@@ -35,11 +35,11 @@
 			</div>
 		</div>
 	</nav>
-	<!--End Navbar-->
+<!--	End Navbar-->
 
 
 	<section id="featured" class="my-5 pt-5">
-		<div class="container-register mt-5 py-5" ng-controller="formController">
+		<div class="container-register mt-5 py-5" ng-controller="registerCustomerFormController">
 			<div class="textIntro">
 				<h1 class="text-center">Registration Form</h1>
 				<p ng-show="msg">{{msg}}</p>
@@ -71,26 +71,7 @@
 				</select>
 				<select name="district" id="district">
 					<option value="">-- Select District --</option>
-				</select>
-
-				<div class="d-flex justify-content-between">
-					<label>Enter your licence plate number: </label>
-					<div>					
-						<input type="number" name="provinceNumber" ng-model="provinceNumber" ng-required="true" maxlength="2">
-						<p class="error" ng-show="myForm.provinceNumber.$invalid && myForm.provinceNumber.$touched">Invalid input.</p>
-					</div>
-					<div>
-						<input type="text" name="charPlate" ng-model="charPlate" ng-required="true" minlength="1" maxlength="3">
-						<p class="error" ng-show="myForm.charPlate.$invalid && myForm.charPlate.$touched">Invalid input.</p>
-					</div>
-					<div>
-						<input type="number" name="intPlate" ng-model="intPlate" ng-required="true" minlength="1" maxlength="4">
-						<p class="error" ng-show="myForm.intPlate.$invalid && myForm.intPlate.$touched">Invalid input.</p>
-					</div>					
-				</div>
-				<select name="brand" id="brand">
-					<option value="">-- Select Brand --</option>
-				</select>
+				</select>				
 
 				<button type="submit" class="btn" ng-disabled="myForm.$invalid">Submit</button>
 			</form>
