--- a/src/main/resources/templates/trafficInsuranceForm.html
+++ b/src/main/resources/templates/trafficInsuranceForm.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Registration Form</title>
+	<title>Traffic Insurance Form</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
@@ -29,7 +29,7 @@
 						<a class="nav-link" href="/customerList">See Customer List</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" href="/customerRegisterForm">New Customer Register</a>
+						<a class="nav-link" href="/customerRegisterForm">New Customer Register</a>
 					</li>
 				</ul>
 			</div>
@@ -39,41 +39,22 @@
 
 
 	<section id="featured" class="my-5 pt-5">
-		<div class="container-register mt-5 py-5" ng-controller="formController">
+		<div class="container-register mt-5 py-5" ng-controller="trafficInsuranceFormController">
 			<div class="textIntro">
-				<h1 class="text-center">Registration Form</h1>
+				<h1 class="text-center">Traffic Insurance Form</h1>
 				<p ng-show="msg">{{msg}}</p>
 			</div>
 
-			<form th:action="@{/register}" th:objects="${customer}" method="post" name="myForm" ng-submit="register()">
+			<form th:action="@{/register}" th:objects="${customer}" method="post" name="myForm" ng-submit="register()">				
 
-				<input type="text" name="tc" placeholder="TC Number" ng-model="tc" ng-required="true" minlength="11"
-					maxlength="11">
-				<p class="error" ng-show="myForm.tc.$invalid && myForm.tc.$touched">Fill out your TC number.</p>
-
-				<input type="date" name="birth" placeholder="Birth Date" ng-model="birth" ng-required="true">
-				<p class="error" ng-show="myForm.birth.$invalid && myForm.birth.$touched">Fill out your Birth Date.</p>
-				<!--<p class="error" ng-show="myForm.birth.$error.date">Incorrect date selection</p>-->
-
-				<input type="text" name="email" placeholder="Email" ng-model="email" ng-required="true">
-				<p class="error" ng-show="myForm.email.$invalid && myForm.email.$touched">Enter your corrent email.</p>
-
-				<input type="text" name="firstname" placeholder="First Name" ng-model="firstname" ng-required="true">
-				<p class="error" ng-show="myForm.firstname.$invalid && myForm.firstname.$touched">Fill out your first
-					name.</p>
-
-				<input type="text" name="lastname" placeholder="Last Name" ng-model="lastname" ng-required="true">
-				<p class="error" ng-show="myForm.lastname.$invalid && myForm.lastname.$touched">Fill out your last name.
-				</p>
-
-				<select name="province" id="province">
-					<option value="">-- Select Province --</option>
+				<select name="format" onchange="location = this.value;">
+							<option>Select</option>
+							<option value="">Traffic Insurance</option>
+							<option value="">Comprehensive Insurance</option>
+							<option value="">Health Insurance</option>
+							<option value="">Earthquake Insurance</option>
 				</select>
-				<select name="district" id="district">
-					<option value="">-- Select District --</option>
-				</select>
-
-				<div class="d-flex justify-content-between">
+				<div class="d-flex justify-content-between mt-3">					
 					<label>Enter your licence plate number: </label>
 					<div>					
 						<input type="number" name="provinceNumber" ng-model="provinceNumber" ng-required="true" maxlength="2">
