--- a/src/main/resources/templates/customerList.html
+++ b/src/main/resources/templates/customerList.html
@@ -76,6 +76,7 @@
 		<table class="table table-hover">
 			<thead>
 				<tr>
+					<th scope="col">Id</th>
 					<th scope="col">TC</th>
 					<th scope="col">Birth-Date</th>
 					<th scope="col">Email</th>
@@ -89,6 +90,7 @@
 			</thead>
 			<tbody>
 				<tr th:each="c :${customer}">
+					<td th:text="${c.customer_id}"></td>
 					<td th:text="${c.tc}"></td>
 					<td th:text="${c.birth}"></td>
 					<td th:text="${c.email}"></td>
@@ -98,13 +100,14 @@
 					<td th:text="${c.district}"></td>					
 					<td><select name="format" onchange="location = this.value;">
 							<option>Select</option>
+<!--							<option><a th:href="@{/trafficInsuranceForm/{customer_id}(customer_id=${c.customer_id})}">Traffic Insurance</a></option>  -->
 							<option value="/trafficInsuranceForm">Traffic Insurance</option>
 							<option value="">Comprehensive Insurance</option>
 							<option value="">Health Insurance</option>
 							<option value="">Earthquake Insurance</option>
 						</select>
 					</td>
-					<td><button><a th:href="@{/deleteCustomer/{id}(id=${c.id})}"><i id="icon-trash"
+					<td><button><a th:href="@{/deleteCustomer/{customer_id}(customer_id=${c.customer_id})}"><i id="icon-trash"
 									class="gg-trash"></i></a></button></td>
 				</tr>
 			</tbody>
