--- a/src/main/resources/templates/customerRegisterForm.html
+++ b/src/main/resources/templates/customerRegisterForm.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 
-</head>
+</head> 
 
 <body ng-app="myApp">
 
@@ -47,30 +47,34 @@
 
 			<form th:action="@{/register}" th:objects="${customer}" method="post" name="myForm" ng-submit="register()">
 
-				<input type="text" name="tc" placeholder="TC Number" ng-model="tc" ng-required="true" minlength="11"
+				<input type="text" name="tc" placeholder="TC Number*" ng-model="tc" ng-required="true" ng-pattern="/^[0-9]*$/" minlength="11"
 					maxlength="11">
-				<p class="error" ng-show="myForm.tc.$invalid && myForm.tc.$touched">Fill out your TC number.</p>
+				<p class="error" ng-show="myForm.tc.$invalid && myForm.tc.$touched">Fill out your TC number correctly.</p>
 
-				<input type="date" name="birth" placeholder="Birth Date" ng-model="birth" ng-required="true">
+				<input type="date" name="birth" placeholder="Birth Date*" ng-model="birth" ng-required="true" id="birthdate">
+				<script>
+				 	var today = new Date().toISOString().split("T")[0];
+				 	document.getElementById("birthdate").setAttribute("max", today);
+				</script>
 				<p class="error" ng-show="myForm.birth.$invalid && myForm.birth.$touched">Fill out your Birth Date.</p>
 				<!--<p class="error" ng-show="myForm.birth.$error.date">Incorrect date selection</p>-->
 
-				<input type="text" name="email" placeholder="Email" ng-model="email" ng-required="true">
+				<input type="text" name="email" placeholder="Email*" ng-model="email" ng-required="true">
 				<p class="error" ng-show="myForm.email.$invalid && myForm.email.$touched">Enter your corrent email.</p>
 
-				<input type="text" name="firstname" placeholder="First Name" ng-model="firstname" ng-required="true">
+				<input type="text" name="firstname" placeholder="First Name*" ng-model="firstname" ng-required="true">
 				<p class="error" ng-show="myForm.firstname.$invalid && myForm.firstname.$touched">Fill out your first
 					name.</p>
 
-				<input type="text" name="lastname" placeholder="Last Name" ng-model="lastname" ng-required="true">
+				<input type="text" name="lastname" placeholder="Last Name*" ng-model="lastname" ng-required="true">
 				<p class="error" ng-show="myForm.lastname.$invalid && myForm.lastname.$touched">Fill out your last name.
 				</p>
 
 				<select name="province" id="province">
-					<option value="">-- Select Province --</option>
+					<option value="">Select Province*</option>					
 				</select>
 				<select name="district" id="district">
-					<option value="">-- Select District --</option>
+					<option value="">Select District*</option>
 				</select>							
 
 				<button type="submit" class="btn" ng-disabled="myForm.$invalid">Submit</button>
