--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -72,25 +72,25 @@
             <div onclick="window.location.href='/form'" class="product text-center col-lg-3 col-md-4 col-12">
                 <img class="img-fluid mb-3" src="img/traffic.jpg" alt="">
                 <h5 class="p-name">Traffic Insurance</h5>
-                <button class="buy-btn">Register Now</button>
+                <button class="buy-btn">Get Offer</button>
                 
             </div>
             <div onclick="window.location.href='/form'" class="product text-center col-lg-3 col-md-4 col-12">
                 <img class="img-fluid mb-3" src="img/auto.jpg" alt="">
                 <h5 class="p-name">Comprehensive Insurance</h5>
-                <button class="buy-btn">Register Now</button>
+                <button class="buy-btn">Get Offer</button>
                 
             </div>
             <div onclick="window.location.href='/form'" class="product text-center col-lg-3 col-md-4 col-12">
                 <img class="img-fluid mb-3" src="img/health.jpg" alt="">
                 <h5 class="p-name">Health Insurance</h5>
-                <button class="buy-btn">Register Now</button>
+                <button class="buy-btn">Get Offer</button>
                 
             </div>
             <div onclick="window.location.href='/form'" class="product text-center col-lg-3 col-md-4 col-12">
                 <img class="img-fluid mb-3" src="img/dask.jpg" alt="">
                 <h5 class="p-name">Earthquake Insurance</h5>
-                <button class="buy-btn">Register Now</button>
+                <button class="buy-btn">Get Offer</button>
                 
             </div>           
         </div>
